--- a/estilos.css
+++ b/estilos.css
@@ -25,7 +25,9 @@ body {
     margin-left: auto;
     margin-right: auto;
     margin-top: 2%;
+    
 }
+
 #nav-bar {
     margin: 2%;
 }
@@ -50,9 +52,11 @@ h2 {
     border-color: #204471;
     border-style:dashed;
     font-family: altonebold;
-
-
+transition: all 1s ease;
+  position: relative;
 }
+
+
 
 #boton-say-hello:hover {
     background-color: #204471;
@@ -186,6 +190,7 @@ h5 {
     color: rgb(49, 49, 49);    
     margin-top: 5%;
     max-width: 100%;
+    font-style: oblique;
 }
 
 
@@ -270,8 +275,50 @@ h4 {
     width: 15%;
 }
 
-.titulo-seccion4{
-    padding: 10%;
+#titulo-seccion4 {
+    padding: 2%;
+    color:rgb(49, 49, 49);
+    text-shadow: 2px 10px 4px rgb(243, 243, 243);
+    opacity: 100;
+    font-family: altonebold;
+    font-style: oblique;
+    
+}
+
+.marquee-container {
+    width: 100%;
+    background-color:rgba(92, 92, 92, 0.274);
+    color:#204471;
+    overflow: hidden;  /* Oculta la barra de desplazamiento */
+    text-align: center;
+
+}
+
+.skills-list {
+    display: flex;
+    font-family: altone;
+    font-size: 150%;
+    padding: 2%;
+    animation: marquee 50s linear infinite;
+}
+
+.skills-list li {
+    padding: 0 20px;
+    white-space: nowrap;
+    list-style: none; /* Elimina los puntos de la lista */
+
+}
+.subtitulo-skills {
+    color: rgb(49, 49, 49);
+}
+
+@keyframes marquee {
+    0% {
+        transform: translateX(100%);
+    }
+    100% {
+        transform: translateX(-100%);
+    }
 }
 
 
@@ -379,7 +426,6 @@ display: none;
     
     p.descripcion {
         font-size: 100%;
-        margin: ;
     }
     
     h6 {
