--- a/estilos.css
+++ b/estilos.css
@@ -15,7 +15,7 @@
 }
 
 body {
-    background-color: rgb(250, 250, 250);
+    background-color: #204471
 }
 
 #jony-foto{
@@ -33,7 +33,7 @@ body {
 }
 h1, h2{
     text-align: center;
-    color: rgb(49, 49, 49);
+    color:white;
 }
 
 h1{
@@ -42,16 +42,17 @@ h1{
 
 h2 {
     font-family: altone;
-    margin-top: 2%;
-    color: #204471;
+    margin-top: 3%;
+    color: white;
 }
 
 #boton-say-hello {
-    color: #204471;
-    font-size: 100%;
-    border-color: #204471;
+    color:white;
+    font-size: 130%;
+    border-color:#ffbd68;
     border-style:dashed;
-    font-family: altonebold;
+    border-radius: 25px;
+    font-family: altone;
 transition: all 1s ease;
   position: relative;
 }
@@ -59,13 +60,13 @@ transition: all 1s ease;
 
 
 #boton-say-hello:hover {
-    background-color: #204471;
+    background-color:#ffbd68;
     color: white;
 }
 
 .seccion1 {
     text-align: center; /* Centra el texto horizontalmente */
-    height: 20%;
+    height: 5%;
     padding: 2%;
 }
 
@@ -109,17 +110,25 @@ transition: all 1s ease;
 
 
 
-
-
 .seccion2{
     width:100%;
     height: 50%;
-    margin-top: 4%;
-    background-color: #204471;
+    margin-top: 8%;
+    background-color:#204471;
 }
 
+.div-dentro-seccion2 {
+    background-color: white;
+    border: 8px solid #204471; /* Cambié a un valor absoluto para el ancho del borde */
+    border-radius: 20px; /* Cambié a un valor absoluto para el radio del borde */
+    margin-left: 15%;
+    margin-right: 15%;
+    padding: 20px; /* Ajusta este valor según tus necesidades */
+}
+
+
 h6{
-    color: white;
+    color:rgb(44, 44, 44);
     font-size: 200%;
     font-family: altonebold;
     text-align: center;
@@ -133,45 +142,28 @@ h5 {
 }
 .descripcion {
     text-align: center;
-    color: aliceblue;
+    color:#204471;
     font-family: altone;
     margin-top: 2%;
+    margin-bottom: 5%;
     font-size: 120%;
+    
+}
+
+.seccion2 {
+    text-align: center; /* Centra el contenido de la sección */
 }
 
 .div-dentro-seccion2 {
-    padding: 4%;
+    display: inline-block; /* Permite que el ancho del contenedor sea igual al contenido */
+    padding: 2%; /* Ajusta este valor según tus necesidades */
 }
 
-.div-dentro-seccion1 {
-    margin: 2%;
+.carta-animada {
+    border:#55575a 1px solid ; /* Borde de 2px para las cartas */
+    box-shadow: #a1a1a1 2px 2px 2px;
+    margin-bottom: 2%; /* Espaciado entre las cartas */
 }
-
-#cartas-div {
-    margin-top: -2%;
-    padding: 2%;
-}
-
-.image-container {
-    display: flex;
-  }
-
-
-
-.card {
-    border:#ffbd68 2px solid; 
-    max-width: 100%; 
-    margin: 0;
-
-     
-}
-
-#cartas-div.row {
-    max-width: 100%;
-    justify-content: center;
-}
-
-
 
 .carta-animada {
     opacity: 0;
@@ -188,10 +180,14 @@ h5 {
 .titulo-seccion2{
     color: rgb(49, 49, 49);    
     margin-top: 5%;
+    padding-top: 5%;
     max-width: 100%;
     font-size: 200%;
 }
 
+.seccion3 {
+    background-color: white;
+}
 
 
 h4 {
@@ -203,11 +199,15 @@ h4 {
     margin: 2%;
     text-align: justify;
     color: #204471;
-    border:#ffbd68 solid 2px;
+    border:#ffbd68 solid 1px;
     background-color: rgba(230, 225, 217, 0.2); /* 32, 68, 113 son los valores RGB del color y 0.2 es el nivel de opacidad */
 }
 
-
+.card-title {
+    color:#fcab41;
+    font-family: altone;
+    font-style: italic;
+}
 #contienecarta {
     max-width: 100%;
     margin: 0;
@@ -239,21 +239,12 @@ h4 {
     max-width: 100%;
     margin: 0;
     justify-content: center;
-    padding-left: 8%;
-    padding-right: 8%;
+    padding-left: 14.5%;
+    padding-right: 14.5%;
     margin-top: 2%;
     padding-bottom: 8%;
 
     
-}
-
-#carta1 , #carta2 {
-    text-align: center;
-}
-
-#cartas-div {
-    padding-left: 12%;
-    padding-right: 12%;
 }
 
 .card-header {
@@ -263,6 +254,7 @@ h4 {
 .logos-de-empresas {
     max-width: 100%;
     text-align: center;
+    margin-top: 3%;
 }
 
 .logoexperiencia1, .logoexperiencia2, .logoexperiencia3 {
@@ -326,6 +318,26 @@ span{
     color: #ffbd68;
 }
 
+footer {
+    background-color: #204471;
+    width: 100%;
+}
+
+
+a {
+        color: #ffbd68;
+        font-size: 500%;
+        font-style: none;
+        text-decoration: none; /* Elimina el subrayado predeterminado de los enlaces */
+        display: inline-block;
+        margin: 0; /* Elimina márgenes */
+        padding: 0; /* Elimina relleno */
+    }
+a:hover{
+    color: white;
+}
+    
+
 
 .skills-lista2 {
     margin-bottom: 10px;
@@ -354,15 +366,16 @@ span{
     
 }
 
-@media only screen and (max-width: 730px) and (min-width: 425px){
+@media only screen and (max-width: 730px) and (min-width: 400px){
 
     .seccion1{
         padding: 5%;
     }
     #cartas-div {
-        margin-top: -4%;
         padding: 2%;
         font-size: 90%;
+        margin: 2%;
+
     }
     #jony-foto{
         width: 35%;
@@ -373,7 +386,7 @@ span{
         margin-top: 10%;
     }
     h1 , h2 {
-        margin-top: 1%;
+        margin-top: 5%;
         font-size: 180%;
     }
 
@@ -387,95 +400,42 @@ display: none;
 }
 #carta1 , #carta2 {
     text-align: center;
+    
 }
 
-#cartas-div {
-    padding-left: 12%;
-    padding-right: 6%;
-}
+
 p.descripcion {
     font-size: 100%;
+    margin: 4%;
+    
 }
 
 h6 {
     font-size: 160%;
+    margin-top: 5%;
+}
+
+.div-dentro-seccion2 {
+    margin-left: 7%;
+    margin-right: 7%;
+   
 }
 
 
-
 }
 
-@media only screen and (max-width: 430px) and (min-width: 415px){
+
+@media only screen and (max-width: 400px) and (min-width: 300px){
 
     .seccion1{
-        padding: 5%;
+        padding: 8%;
     }
 
-    #jony-foto{
-        width: 35%;
-        height: 100%;
-        display: block; /* Asegura que la imagen se comporte como un bloque para aplicar márgenes automáticamente */
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 10%;
-    }
-    h1 , h2 {
-        margin-top: 30px;
-        font-size: 180%;
-    }
-
-    #contenedor-iconos {
-        display: none;
+    .div-dentro-seccion2 {
+        margin-left: 7%;
+        margin-right: 7%;
        
     }
-    .logos-de-empresas {
-display: none;
-}
-
-
-h6 {
-    font-size: 160%;
-}
-
-}
-
-@media only screen and (max-width: 500px) and (min-width: 300px){
-
-
-.marquee-container {
-    font-size: 80%;
-}
-
-.skills-lista2 {
-    margin-right: 15%;
-
-}
-.titulo-seccion2{
-    font-size: 150%;
-
-}
-.descripcion {
-    padding: 4%;
-}
-#carta1 , #carta2 {
-    text-align: center;
-}
-
-#cartas-div {
-    padding-left: 12%;
-    padding-right: 6%;
-}
-p.descripcion {
-    font-size: 100%;
-}
-}
-
-@media only screen and (max-width: 415px) and (min-width: 300px){
-
-    .seccion1{
-        padding: 5%;
-    }
-
 
     #jony-foto{
         width: 45%;
@@ -487,7 +447,7 @@ p.descripcion {
     }
     h1 , h2 {
         margin-top: 30px;
-        font-size: 140%;
+        font-size: 100%;
     }
 
     #contenedor-iconos {
@@ -496,11 +456,11 @@ p.descripcion {
     }
     
     p.descripcion {
-        font-size: 100%;
-    }
+        font-size: 80%;
+        }
     
     h6 {
-        font-size: 160%;
+        font-size: 120%;
     }
 
 
@@ -526,15 +486,16 @@ p.descripcion {
 
 #carta1 , #carta2 {
     text-align: center;
+    margin-top: 2%;
+    font-size: 80%;
 }
 
-#cartas-div {
-    padding-left: 12%;
-    padding-right: 5%;
+.div-dentro-seccion2 {
+    display: inline-block; /* Permite que el ancho del contenedor sea igual al contenido */
+    padding: 10%; /* Ajusta este valor según tus necesidades */
 }
-p.descripcion {
-    font-size: 100%;
-}
+
+
 
 }
 
